@@ -24,6 +24,8 @@ remove = warnings
 remove = if
 remove = Carp
 remove = Data::Dumper
+remove = Path::Class::File
+remove = Path::Class::Dir
 
 [Author::Plicease::Upload]
 cpan = 1
